--- a/verpatch/verpatch.vcxproj.filters
+++ b/verpatch/verpatch.vcxproj.filters
@@ -19,5 +19,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ver-self.cmd" />
+    <None Include="verpatch.nuspec" />
   </ItemGroup>
 </Project>
